MAR-607: fix clipping of radio button in first column

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -154,6 +154,9 @@ table.dataTable {
         padding-left: 15px;
         padding-right: 0;
         width: 30px;
+        span {
+          overflow: visible;
+        }
       }
       &:last-child {
         max-width: 60px;
